--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "font-awesome": "^4.7.0",
         "jquery.easing": "^1.4.1",
         "popper.js": "^1.12.5",
+        "vue-progressbar": "^0.7.3",
         "vue-router": "^2.7.0",
         "vue2-google-maps": "^0.8.3"
     }
