--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "svg": "vsvg -s ./resources/assets/svg -t ./resources/assets/js/svg"
     },
     "devDependencies": {
         "axios": "^0.16.2",
@@ -15,11 +16,11 @@
         "jquery": "^3.2.1",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "vue": "^2.1.10"
+        "vue": "^2.1.10",
+        "vue-svgicon": "^2.1.0"
     },
     "dependencies": {
         "bootstrap": "4.0.0-beta",
-        "font-awesome": "^4.7.0",
         "jquery.easing": "^1.4.1",
         "popper.js": "^1.12.5",
         "vue-progressbar": "^0.7.3",
