--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "popper.js": "^1.12.6",
+        "scrollmagic": "^2.0.5",
         "vue": "^2.1.10",
         "vue-progressbar": "^0.7.3",
         "vue-router": "^3.0.1",
