--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "axios": "^0.17.0",
         "bootstrap": "4.0.0-beta",
         "cross-env": "^5.1.1",
+        "gsap": "^1.20.3",
         "jquery": "^3.2.1",
         "jquery.easing": "^1.4.1",
         "laravel-mix": "^1.0",
