--- a/package.json
+++ b/package.json
@@ -11,21 +11,25 @@
         "svg": "vsvg -s ./resources/assets/svg -t ./resources/assets/js/svg"
     },
     "devDependencies": {
-        "babel-preset-react": "^6.24.1",
-        "vue-svgicon": "^2.1.2"
+        "@babel/preset-react": "^7.0.0",
+        "resolve-url-loader": "2.3.1",
+        "sass": "^1.16.1",
+        "sass-loader": "7.*",
+        "vue-svgicon": "^3.2.2",
+        "vue-template-compiler": "^2.5.22"
     },
     "dependencies": {
         "axios": "^0.18.0",
-        "bootstrap": "4.0.0",
-        "cross-env": "^5.1.3",
+        "bootstrap": "4.2.1",
+        "cross-env": "^5.2.0",
         "jquery": "^3.3.1",
         "jquery.easing": "^1.4.1",
-        "laravel-mix": "^2.0.0",
-        "lodash": "^4.17.5",
-        "popper.js": "^1.12.9",
-        "vue": "^2.5.13",
-        "vue-progressbar": "^0.7.3",
-        "vue-router": "^3.0.1",
-        "vue2-google-maps": "^0.8.8"
+        "laravel-mix": "^4.0.14",
+        "lodash": "^4.17.11",
+        "popper.js": "^1.14.6",
+        "vue": "^2.5.22",
+        "vue-progressbar": "^0.7.5",
+        "vue-router": "^3.0.2",
+        "vue2-google-maps": "^0.10.5"
     }
 }
