--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "svg": "vsvg -s ./resources/assets/svg -t ./resources/assets/js/svg"
+        "svg": "vsvg -s ./resources/images/svg -t ./resources/js/svg"
     },
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
