--- a/package.json
+++ b/package.json
@@ -11,14 +11,9 @@
         "svg": "vsvg -s ./resources/images/svg -t ./resources/js/svg"
     },
     "devDependencies": {
-        "@babel/preset-react": "^7.0.0",
-        "resolve-url-loader": "2.3.1",
-        "sass": "^1.17.1",
-        "sass-loader": "7.*",
-        "vue-svgicon": "^3.2.2",
-        "vue-template-compiler": "^2.6.7"
     },
     "dependencies": {
+        "@babel/preset-react": "^7.0.0",
         "axios": "^0.18.0",
         "bootstrap": "4.3.1",
         "cross-env": "^5.2.0",
@@ -27,9 +22,14 @@
         "laravel-mix": "^4.0.14",
         "lodash": "^4.17.11",
         "popper.js": "^1.14.7",
+        "resolve-url-loader": "2.3.1",
+        "sass": "^1.17.1",
+        "sass-loader": "7.*",
         "vue": "^2.6.7",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.0.2",
+        "vue-svgicon": "^3.2.2",
+        "vue-template-compiler": "^2.6.7",
         "vue2-google-maps": "^0.10.6"
     }
 }
