:arrow_up: Bump to Laravel v5.7

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -3,7 +3,7 @@ ARG COMPOSER_VERSION=1
 ARG NODE_VERSION=8
 
 ARG INSTALL_BCMATH=false
-ARG INSTALL_EXIF=false
+ARG INSTALL_EXIF=true
 ARG INSTALL_PGSQL=true
 
 # composer install
