--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~4.0",
-        "laravel/framework": "5.7.*",
+        "laravel/framework": "^6.0",
         "laravel/tinker": "~1.0",
         "predis/predis": "^1.1",
         "spatie/laravel-sitemap": "^5.2.11"
