--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,16 +4,19 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 10
   - package-ecosystem: "composer"
     directory: "/"
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 10
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "daily"
     registries:
       - fontawesome-pro
+    open-pull-requests-limit: 10
 registries:
   fontawesome-pro:
     type: npm-registry
