--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -55,7 +55,9 @@ jobs:
     environment:
       name: prod
       url: https://gabecook.com
-    concurrency: prod
+    concurrency:
+      group: prod
+      cancel-in-progress: true
     steps:
       - name: Checkout
         uses: actions/checkout@v3
