--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
     "require": {
         "php": ">=8.1.0",
         "laravel/framework": "^9.0",
+        "laravel/octane": "^1.3",
         "laravel/tinker": "^2.0",
-        "spatie/laravel-sitemap": "^6.2.0"
+        "spatie/laravel-sitemap": "^6.2.0",
+        "spiral/roadrunner": "^2.8.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
