:wrench: (renovate): Add Gitmoji prefixes

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,5 +8,16 @@
     "dependencies",
     "{{datasource}}",
     "{{updateType}}"
+  ],
+  "commitMessagePrefix": ":arrow_up:",
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["lockFileMaintenance", "pin"],
+      "commitMessagePrefix": ":pushpin:"
+    },
+    {
+      "matchUpdateTypes": ["rollback"],
+      "commitMessagePrefix": ":arrow_down:"
+    }
   ]
 }
