:wrench: (renovate): Allow @fortawesome/vue-fontawesome < v3

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -15,6 +15,10 @@
     {
       "matchPackageNames": ["vue-loader"],
       "allowedVersions": "< 16"
+    },
+    {
+      "matchPackageNames": ["@fortawesome/vue-fontawesome"],
+      "allowedVersions": "< 3"
     }
   ],
   "hostRules": [
