--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,17 @@
     "type": "project",
     "require": {
         "php": ">=8.1.0",
-        "laravel/framework": "^9.0",
-        "laravel/octane": "^1.3",
-        "laravel/tinker": "^2.0",
-        "spatie/laravel-sitemap": "^6.2.0",
-        "spiral/roadrunner": "^2.8.2"
+        "laravel/framework": "9.42.2",
+        "laravel/octane": "1.3.10",
+        "laravel/tinker": "2.7.3",
+        "spatie/laravel-sitemap": "6.2.3",
+        "spiral/roadrunner": "2.12.1"
     },
     "require-dev": {
-        "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "1.5.*",
-        "phpunit/phpunit": "^10.0"
+        "filp/whoops": "2.14.6",
+        "fzaninotto/faker": "1.5.0",
+        "mockery/mockery": "1.5.1",
+        "phpunit/phpunit": "10.0."
     },
     "autoload": {
         "classmap": [
