--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "spiral/roadrunner": "2.12.2"
     },
     "require-dev": {
+        "fakerphp/faker": "1.21.0",
         "filp/whoops": "2.14.6",
-        "fzaninotto/faker": "1.5.0",
         "mockery/mockery": "1.5.1",
         "phpunit/phpunit": "10.0."
     },
