:heavy_plus_sign: Add autoprefixer

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/vue-fontawesome": "3.0.3",
     "@popperjs/core": "2.11.6",
     "@vitejs/plugin-vue": "4.0.0",
+    "autoprefixer": "10.4.13",
     "bootstrap": "5.2.3",
     "eslint-config-google": "0.14.0",
     "pocketbase": "0.11.1",
