:wrench: (pre-commit): Run eslint when any frontend file changes

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,6 @@ repos:
         name: eslint
         entry: npm --prefix frontend run lint
         language: system
-        files: '^frontend/src'
+        files: ^frontend
         types_or: [javascript, vue]
         pass_filenames: false
