--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "5.2.3",
     "pocketbase": "0.12.0",
     "sass": "1.58.3",
+    "unplugin-auto-import": "0.15.0",
     "unplugin-vue-components": "0.24.0",
     "vite": "4.1.4",
     "vue": "3.2.47",
