:recycle: (frontend): Replace fontawesome with feather-icons

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,20 +13,17 @@
   "dependencies": {
     "@fawmi/vue-google-maps": "0.9.79",
     "@fontsource/roboto-slab": "4.5.11",
-    "@fortawesome/fontawesome-svg-core": "6.4.0",
-    "@fortawesome/free-brands-svg-icons": "6.4.0",
-    "@fortawesome/pro-regular-svg-icons": "6.4.0",
-    "@fortawesome/pro-solid-svg-icons": "6.4.0",
-    "@fortawesome/vue-fontawesome": "3.0.3",
     "@popperjs/core": "2.11.7",
     "@vitejs/plugin-vue": "4.2.1",
     "autoprefixer": "10.4.14",
     "bootstrap": "5.2.3",
+    "feather-icons": "4.29.0",
     "pocketbase": "0.14.4",
     "sass": "1.62.1",
     "unplugin-auto-import": "0.15.3",
     "unplugin-vue-components": "0.24.1",
     "vite": "4.3.4",
+    "vite-svg-loader": "4.0.0",
     "vue": "3.2.47",
     "vue-router": "4.1.6"
   },
