--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -1,6 +1,8 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
+  "semi": true,
   "tabWidth": 2,
-  "printWidth": 80,
+  "singleQuote": false,
+  "printWidth": 100,
   "trailingComma": "all"
 }
