--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "watch": "vite build --mode=dev --watch",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier . --write --ignore-path .gitignore"
   },
   "dependencies": {
     "@fawmi/vue-google-maps": "0.9.79",
@@ -31,8 +31,10 @@
     "@rushstack/eslint-patch": "1.3.2",
     "@vue/eslint-config-prettier": "7.1.0",
     "eslint": "8.43.0",
-    "eslint-config-google": "0.14.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-vue": "9.14.1",
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "vue-eslint-parser": "9.3.1"
   }
 }
