--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,19 @@
   "dependencies": {
     "@fawmi/vue-google-maps": "0.9.79",
     "@fontsource/roboto-slab": "5.0.3",
+    "@iconify-json/material-symbols": "1.1.49",
+    "@iconify-json/mdi": "1.1.52",
+    "@iconify-json/simple-icons": "1.1.58",
     "@popperjs/core": "2.11.8",
     "@vitejs/plugin-vue": "4.2.3",
     "autoprefixer": "10.4.14",
     "bootstrap": "5.3.0",
-    "feather-icons": "4.29.0",
     "pocketbase": "0.15.2",
     "sass": "1.63.6",
     "unplugin-auto-import": "0.16.4",
+    "unplugin-icons": "0.16.3",
     "unplugin-vue-components": "0.25.1",
     "vite": "4.3.9",
-    "vite-svg-loader": "4.0.0",
     "vue": "3.3.4",
     "vue-router": "4.2.2"
   },
