ci: Unpin actions/checkout digest

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,7 +36,7 @@ jobs:
           aws-region: us-east-2
 
       - name: Checkout fleet-infra
-        uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4
+        uses: actions/checkout@v4
         with:
           repository: gabe565/fleet-infra
           path: fleet-infra
