--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -84,7 +84,7 @@ jobs:
         with:
           context: .
           pull: true
-          push: ${{ github.secret_source == 'Actions' }}
+          push: ${{ github.ref_name == 'main' || startsWith(github.ref, 'refs/tags/v') }}
           platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
           target: backend
