--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,7 +52,6 @@ jobs:
   build-backend:
     name: Build Backend Image
     runs-on: ubuntu-latest
-    needs: [backend-lint, backend-test, frontend-lint]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -95,7 +94,6 @@ jobs:
   build-frontend:
     name: Build Frontend
     runs-on: ubuntu-latest
-    needs: [backend-lint, backend-test, frontend-lint]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -121,7 +119,7 @@ jobs:
 
   deploy-dev:
     name: Deploy (dev)
-    needs: [build-backend, build-frontend]
+    needs: [backend-lint, backend-test, frontend-lint, build-backend, build-frontend]
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
     concurrency:
       group: deploy-dev
@@ -135,7 +133,7 @@ jobs:
 
   deploy-prod:
     name: Deploy (prod)
-    needs: [build-backend, build-frontend]
+    needs: [backend-lint, backend-test, frontend-lint, build-backend, build-frontend]
     if: startsWith(github.ref, 'refs/tags/v')
     concurrency:
       group: deploy-prod
