--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -142,3 +142,21 @@ jobs:
       url: https://gabecook.com
     secrets:
       infra-ssh-key: ${{ secrets.INFRA_SSH_KEY }}
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: [backend-lint, backend-test, frontend-lint, build-backend, build-frontend]
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Generate Changelog
+        id: changelog
+        uses: gabe565/changelog-generator@v0
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          body: ${{ steps.changelog.outputs.changelog }}
