--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -109,6 +109,7 @@ jobs:
       - name: Build
         env:
           VITE_API_ADDRESS: https://api.gabecook.com
+          VITE_PLAUSIBLE_HOST: https://analytics.gabe565.com
           VITE_GOOGLE_API_KEY: ${{ secrets.VITE_GOOGLE_API_KEY }}
           VITE_TURNSTILE_KEY: ${{ secrets.VITE_TURNSTILE_KEY }}
         run: npm --prefix=frontend run build
