--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-vue": "5.1.2",
     "autoprefixer": "10.4.20",
     "bootstrap": "5.3.3",
+    "plausible-tracker": "0.3.9",
     "pocketbase": "0.21.4",
     "sass": "1.77.8",
     "unplugin-icons": "0.19.2",
