chore(golangci-lint): `exportloopref` -> `copyloopvar`

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -18,6 +18,7 @@ linters:
     - bidichk
     - bodyclose
     - copyloopvar
+    - copyloopvar
     - decorder
     - dupl
     - durationcheck
@@ -25,7 +26,6 @@ linters:
     - errcheck
     - errname
     - errorlint
-    - exportloopref
     - forbidigo
     - gci
     - ginkgolinter
