--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -1,8 +1,11 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "semi": true,
   "tabWidth": 2,
   "singleQuote": false,
   "printWidth": 100,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "importOrderSortSpecifiers": true,
+  "importOrder": ["<THIRD_PARTY_MODULES>", "^\\.\\.?", "^~icons"]
 }
