--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "9.16.0",
+    "@trivago/prettier-plugin-sort-imports": "5.2.0",
     "@vue/eslint-config-prettier": "10.1.0",
     "eslint": "9.16.0",
     "eslint-config-prettier": "9.1.0",
