--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "bootstrap": "5.3.3",
     "plausible-tracker": "0.3.9",
     "pocketbase": "0.22.1",
-    "sass": "1.82.0",
+    "sass-embedded": "1.83.0",
     "unplugin-icons": "0.21.0",
     "vite": "6.0.2",
     "vue": "3.5.13",
