--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,14 +16,17 @@
     "@iconify-json/material-symbols": "1.2.8",
     "@iconify-json/mdi": "1.2.1",
     "@iconify-json/simple-icons": "1.2.14",
+    "@iconify-json/svg-spinners": "1.2.2",
     "@popperjs/core": "2.11.8",
     "@types/cloudflare-turnstile": "0.2.2",
     "@vitejs/plugin-vue": "5.2.1",
     "autoprefixer": "10.4.20",
-    "bootstrap": "5.3.3",
+    "daisyui": "4.12.23",
     "plausible-tracker": "0.3.9",
     "pocketbase": "0.22.1",
+    "postcss": "8.4.49",
     "sass-embedded": "1.83.0",
+    "tailwindcss": "3.4.17",
     "unplugin-icons": "0.21.0",
     "vite": "6.0.2",
     "vue": "3.5.13",
