chore(docker): Remove leftover FontAwesome token env

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,7 @@
 services:
   app:
     image: "ghcr.io/gabe565/portfolio"
-    build:
-      args:
-        FONTAWESOME_NPM_AUTH_TOKEN: "$FONTAWESOME_NPM_AUTH_TOKEN"
-      context: .
+    build: "."
     ports:
       - "80:80"
     volumes:
