--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -82,7 +82,7 @@ jobs:
           context: .
           pull: true
           push: ${{ github.ref_name == 'main' || startsWith(github.ref, 'refs/tags/v') }}
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           target: backend
           labels: ${{ steps.meta.outputs.labels }}
