--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -78,7 +78,6 @@ linters:
     - sqlclosecheck
     - staticcheck
     - stylecheck
-    - tenv
     - testableexamples
     - testifylint
     - typecheck
@@ -86,6 +85,7 @@ linters:
     - unparam
     - unused
     - usestdlibvars
+    - usetesting
     - wastedassign
     - whitespace
     - zerologlint
