--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "4.0.14",
     "@types/cloudflare-turnstile": "0.2.2",
     "@vitejs/plugin-vue": "5.2.3",
+    "@vueuse/core": "13.0.0",
     "daisyui": "5.0.6",
     "plausible-tracker": "0.3.9",
     "pocketbase": "0.25.2",
