--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,20 +30,20 @@ jobs:
       url: ${{ inputs.url }}
     steps:
       - name: Checkout home-ops
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           repository: gabe565/home-ops
           path: home-ops
           ssh-key: ${{ secrets.infra-ssh-key }}
 
       - name: Download artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
         with:
           name: dist
           path: dist
 
       - name: Setup yampl
-        uses: clevyr/setup-yampl-action@v1
+        uses: clevyr/setup-yampl-action@7d17e50e3478724c027861dc44f9b7ab14e3c96a # v1.2.1
 
       - name: Update backend
         run: |
@@ -53,7 +53,7 @@ jobs:
             "home-ops/${{ inputs.path }}"
 
       - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v6
+        uses: stefanzweifel/git-auto-commit-action@778341af668090896ca464160c2def5d1d1a3eb0 # v6.0.1
         if: inputs.environment == 'prod'
         with:
           repository: home-ops
@@ -61,7 +61,7 @@ jobs:
           commit_message: "chore(portfolio): Update image tag to ${{ github.ref_name }}"
 
       - name: Publish to Cloudflare Pages
-        uses: cloudflare/pages-action@v1
+        uses: cloudflare/pages-action@f0a1cd58cd66095dee69bfa18fa5efd1dde93bca # v1.5.0
         if: inputs.environment == 'prod'
         with:
           apiToken: ${{ secrets.cloudflare-api-token }}
