chore(frontend): migrate to pnpm

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,15 +39,20 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
+        with:
+          package_json_file: frontend/package.json
       - name: Setup Node.js for use with actions
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
           node-version-file: frontend/.nvmrc
-          cache: npm
-          cache-dependency-path: frontend/package-lock.json
+          cache: pnpm
+          cache-dependency-path: frontend/pnpm-lock.yaml
       - name: Install dependencies
-        run: npm --prefix frontend install --prefer-offline --no-audit
-      - run: npm --prefix frontend run lint
+        working-directory: frontend
+        run: pnpm install
+      - working-directory: frontend
+        run: pnpm run lint
 
   build-backend:
     name: Build Backend Image
@@ -100,20 +105,25 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           submodules: true
-      - name: Set up Node
+      - uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
+        with:
+          package_json_file: frontend/package.json
+      - name: Setup Node.js for use with actions
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
           node-version-file: frontend/.nvmrc
-          cache: npm
-          cache-dependency-path: frontend/package-lock.json
+          cache: pnpm
+          cache-dependency-path: frontend/pnpm-lock.yaml
       - name: Install dependencies
-        run: npm --prefix=frontend install --prefer-offline --no-audit
+        working-directory: frontend
+        run: pnpm install --prod
       - name: Build
         env:
           VITE_API_ADDRESS: https://api.gabecook.com
           VITE_PLAUSIBLE_HOST: https://analytics.gabe565.com
           VITE_TURNSTILE_KEY: ${{ secrets.VITE_TURNSTILE_KEY }}
-        run: npm --prefix=frontend run build
+        working-directory: frontend
+        run: pnpm run build
       - name: Upload artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
